added app logo, added local score counter for GameFragment, updated database: no longer causes crashes when accessing, but data will not update in the table, needs further work.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="medium">medium</string>
     <string name="hard">hard</string>
 
+    <string name="correct">0</string>
+    <string name="incorrect">0</string>
+    <string name="average">0</string>
+
     <string name="settings_description">
         This is the settings menu, here you can change the difficulty
         of the words, by difficulty we mean the length of the word between one of 3 choices
